apiserver/bpmn-engine/shar/deploy/compose/envoy-http-proxy.yml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog          
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  timeout: 0s
                  cluster: service1
              cors:
                allow_origin_string_match:
                - prefix: "*"
          http_filters:
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router


  clusters:
  - name: service1
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${ENVOY_LB_ENDPOINT_ADDRESS}
                port_value: ${ENVOY_LB_ENDPOINT_PORT}

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000
